[package]
name = "stft-rs"
description = "Simple, streaming-friendly, no_std compliant STFT implementation with mel spectrogram support"
version = "0.5.0"
edition = "2024"
authors = ["David Maseda Neira <david.masedan@gmail.com>"]
license = "MIT"
repository = "https://github.com/wizenink/stft-rs"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rustfft = { version = "6.4.1", optional = true }
microfft = { version = "0.6.0", optional = true }
rayon = { version = "1.11", optional = true }

[features]
default = ["std"]
std = ["num-traits/std", "rustfft-backend"]
rustfft-backend = ["dep:rustfft"]
microfft-backend = ["dep:microfft"]
rayon = ["rustfft-backend", "dep:rayon"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
ndarray-stats = "0.6.0"
rand = "0.9.2"
rand_distr = "0.5.1"

[[bench]]
name = "stft-bench"
harness = false
